...
)
@Composable
private fun SearchAndFilterControlsScrollingPreview() {
    GameOfThronesTheme {
        SearchAndFilterControls(
            state = CharactersState(
                searchQuery = "Stark",
                searchHistory = emptyList(),
                filter = CharacterFilter(
                    onlyFavorites = true,
                    isDead = false,
                    gender = "Female",
                    culture = "Northmen",
...
